--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -233,7 +233,10 @@
           </div>
           <div class="group">
             <label class="label" id="lbl-ln">ロットNo（自動的に大文字変換されます）</label>
-            <input type="text" inputmode="text" pattern="[0-9A-Z\-]*" class="input" id="ln" placeholder="例: LOT-001" style="text-transform:uppercase" oninput="this.value=this.value.toUpperCase()">
+<input type="text" inputmode="text" pattern="[0-9A-Z\-]*"
+  class="input" id="ln" placeholder="例: M591"
+  style="text-transform:uppercase"
+  autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false">
           </div>
 
           <div class="inspector-section">
