--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -342,7 +342,10 @@
         
         <div class="form-group">
           <label class="form-label">品番コード（自動的に大文字変換されます）</label>
-          <input type="text" inputmode="text" pattern="[0-9A-Z\-]*" class="form-input" id="productCode" placeholder="例: N0009" style="text-transform:uppercase" oninput="this.value=this.value.toUpperCase()">
+        <input type="text" inputmode="text" pattern="[0-9A-Z\-]*"
+  class="form-input" id="productCode" placeholder="例: N0009"
+  style="text-transform:uppercase"
+  autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false">
         </div>
         
         <div class="form-group">
