--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -76,7 +76,9 @@
   #qr-view input[type="file"]{ display:none; }
   #qr-view .qr-markRow{ display:flex; gap:8px; align-items:stretch; flex-wrap:wrap; margin-top:8px; }
   #qr-view .qr-markRow input[type="text"]{ flex:1 1 100%; min-width:200px; padding:12px; border:1px solid #d1d5db; border-radius:10px; font-size:15px; background:#fff; min-height:44px; }
-  #qr-view .qr-lastBox{ font-size:12px; color:#6b7280; margin-top:6px; word-break:break-all; }
+#qr-view .qr-lastBox{
+  display:none !important;
+}
   #qr-view .qr-lastBox code{ background:#f3f4f6; padding:3px 7px; border-radius:6px; }
   #qr-view .qr-toast{ position:fixed; right:16px; bottom:16px; background:#111827; color:#fff; padding:12px 16px; border-radius:10px; font-size:14px; opacity:.96; display:none; z-index:9999; }
 </style>
