--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -58,7 +58,12 @@
   #qr-view .qr-grid{ display:grid; grid-template-columns:1fr; gap:16px; }
   #qr-view .qr-baseBox{ border:2px dashed #cbd5e1; border-radius:16px; background:#fbfdff; padding:20px; text-align:center; display:flex; flex-direction:column; justify-content:center; min-height:160px; }
   #qr-view .qr-baseHeading{ font-size:16px; color:#0f172a; margin-bottom:6px; }
-  #qr-view .qr-baseValue{ font-weight:800; font-size:clamp(50px,15vw,100px); color:#0b3b75; word-break:break-all; }
+#qr-view .qr-baseValue{
+  font-weight:700;
+  font-size:clamp(25px,7vw,50px);  /* ← 約半分に調整 */
+  color:#0b3b75;
+  word-break:break-all;
+}
   #qr-view .qr-placeholder{ color:#94a3b8; }
   #qr-view .qr-imgBox{ border:2px dashed #e5e7eb; border-radius:16px; background:#fff; padding:10px; display:flex; align-items:center; justify-content:center; min-height:220px; }
   #qr-view #qr-productImage{ max-width:50%; max-height:160px; object-fit:contain; display:none; }
