Refactor qr-baseBox styles for better layout

--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -56,11 +56,23 @@
   #qr-view .qr-card{ background:#fff; border:1px solid var(--border); border-radius:14px; padding:16px; margin-bottom:18px; }
   #qr-view .qr-bigLabel{ font-size:18px; font-weight:700; margin-bottom:8px; }
   #qr-view .qr-grid{ display:grid; grid-template-columns:1fr; gap:16px; }
-  #qr-view .qr-baseBox{ border:2px dashed #cbd5e1; border-radius:16px; background:#fbfdff; padding:20px; text-align:center; display:flex; flex-direction:column; justify-content:center; min-height:160px; }
+ #qr-view .qr-baseBox{
+  border:1.5px dashed #cbd5e1;
+  border-radius:10px;
+  background:#fbfdff;
+  padding:10px;
+  text-align:center;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  min-height:80px;  /* ← 160pxから半分に */
+  transform: scale(0.9); /* 全体を軽く縮小（任意） */
+}
+
   #qr-view .qr-baseHeading{ font-size:16px; color:#0f172a; margin-bottom:6px; }
 #qr-view .qr-baseValue{
   font-weight:700;
-  font-size:clamp(25px,7vw,50px);  /* ← 約半分に調整 */
+  font-size:clamp(25px,7vw,80px);  /* ← 約半分に調整 */
   color:#0b3b75;
   word-break:break-all;
 }
