--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -77,7 +77,17 @@
   word-break:break-all;
 }
   #qr-view .qr-placeholder{ color:#94a3b8; }
-  #qr-view .qr-imgBox{ border:2px dashed #e5e7eb; border-radius:16px; background:#fff; padding:10px; display:flex; align-items:center; justify-content:center; min-height:220px; }
+  #qr-view .qr-imgBox{
+  border:1.5px dashed #e5e7eb;
+  border-radius:10px;
+  background:#fff;
+  padding:6px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  min-height:110px;  /* ← 220px → 半分 */
+  max-height:140px;  /* ← 高さの上限も追加して安定 */
+}
   #qr-view #qr-productImage{ max-width:50%; max-height:80px; object-fit:contain; display:none; }
   #qr-view .qr-imgHint{ color:#9ca3af; font-size:14px; text-align:center; }
   #qr-view .qr-resultArea{ text-align:center; padding:16px 10px 0; }
