--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -1897,7 +1897,7 @@ function expBoth(){
 document.addEventListener('DOMContentLoaded', init);
 
 (function(){
-  const CUT_START = 3, CUT_LENGTH = 5, ADMIN_QR = "ADMIN123";
+  const CUT_START = 3, CUT_LENGTH = 5, ADMIN_QR = "EDOCNIMDAmiyama";
   let baseQR = null, isLocked = false, buffer = "", lastScanIndex = -1;
   let logData = [["Timestamp", "RawQR", "CutQR", "Result", "LockState", "ImageFile", "Mark", "MarkMsg"]];
 
