Refactor resizing logic for dragged elements

--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -2170,27 +2170,27 @@
             const deltaX = e.clientX - dragStartX;
             const deltaPercent = (deltaX / parentRect.width) * 100;
 
-            if (isResizing) {
-                const currentWidth = parseFloat(draggedElement.style.width);
-                const currentLeft = parseFloat(draggedElement.style.left);
-                if (resizeDirection === 'right') {
-                    const newWidth = Math.max(3, currentWidth + deltaPercent);
-                    draggedElement.style.width = `${newWidth}%`;
-                } else {
-                    const newLeft = Math.max(0, Math.min(95, currentLeft + deltaPercent));
-                    const widthChange = currentLeft - newLeft;
-                    const newWidth = Math.max(3, currentWidth + widthChange);
-                    draggedElement.style.left = `${newLeft}%`;
-                    draggedElement.style.width = `${newWidth}%`;
-                }
-            } else {
-                const newLeft = Math.max(0, Math.min(95, dragStartLeft + deltaPercent));
-                draggedElement.style.left = `${newLeft}%`;
-            }
-            dragStartX = e.clientX;
-            dragStartLeft = parseFloat(draggedElement.style.left);
-        }
-
+if (isResizing) {
+  const currentWidth = parseFloat(draggedElement.style.width);
+  const currentLeft  = parseFloat(draggedElement.style.left);
+  if (resizeDirection === 'right') {
+    const tentative = currentWidth + deltaPercent;
+    const maxWidth = Math.max(3, 100 - currentLeft);
+    const newWidth = Math.max(3, Math.min(maxWidth, tentative));
+    draggedElement.style.width = `${newWidth}%`;
+  } else { // left
+    const newLeft = Math.max(0, Math.min(95, currentLeft + deltaPercent));
+    const widthChange = currentLeft - newLeft;
+    const tentative = currentWidth + widthChange;
+    const maxWidth = Math.max(3, 100 - newLeft);
+    const newWidth = Math.max(3, Math.min(maxWidth, tentative));
+    draggedElement.style.left = `${newLeft}%`;
+    draggedElement.style.width = `${newWidth}%`;
+  }
+} else {
+  const newLeft = Math.max(0, Math.min(95, dragStartLeft + deltaPercent));
+  draggedElement.style.left = `${newLeft}%`;
+}
        // 1日16h（8:00-24:00）を前提 → 15分刻み = 16h * 4 = 64グリッド
 function snapPercentTo15min(pct){
   const grid = 64; // 15分刻み
