Update title and header for gyomu_nippo.html

--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>工数管理アプリ</title>
+    <title>量産G工数管理</title>
     <style>
         * {
             margin: 0;
@@ -1204,8 +1204,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📊 工数管理アプリ</h1>
-            <p>タスクの予定・実績を管理し、タイムラインで可視化</p>
+            <h1>量産G工数管理</h1>
         </div>
 
         <div class="tabs">
