--- a/myapps.html
+++ b/myapps.html
@@ -120,7 +120,7 @@
 
         <!-- 公開ページ（ポートフォリオ一覧） -->
         <div id="publicSection">
-            <div id="appList" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+            <div id="appList" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- アプリカードがここに表示される -->
             </div>
             <p id="noApps" class="text-center text-gray-500 hidden">まだアプリが登録されていません</p>
