--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -1458,7 +1458,6 @@
                 <h2>⏰ タイムライン</h2>
                 <div class="date-navigation">
                     <button onclick="changeDate(-1)">← 前日</button>
-                    <div class="current-date-display" id="currentDateDisplay"></div>
                     <button onclick="changeDate(1)">翌日 →</button>
                     <input type="date" id="timelineDate" onchange="onDateChange()">
                 </div>
@@ -1480,6 +1479,10 @@
             </div>
             <div id="deadlineWarnings" style="margin-top: 15px;"></div>
 
+
+            <div style="text-align: center; margin: 20px 0 10px 0;">
+                <div id="currentDateDisplay" style="font-size: 24px; font-weight: bold; color: #667eea; padding: 10px; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); border-radius: 8px; display: inline-block; min-width: 300px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);"></div>
+            </div>
 
             <div class="timeline-container">
                 <div class="timeline">
