--- a/abnreports.html
+++ b/abnreports.html
@@ -293,15 +293,14 @@
   import { getStorage, ref, uploadBytes, getDownloadURL, listAll, deleteObject } from 'https://www.gstatic.com/firebasejs/10.12.4/firebase-storage.js';
 
   // ===== Config（自プロジェクトの値を貼る）=====
-  const firebaseConfig = {
-    // TODO: 自分の firebaseConfig を貼り付け
-    apiKey: "YOUR_KEY",
-    authDomain: "YOUR_APP.firebaseapp.com",
-    projectId: "YOUR_APP",
-    storageBucket: "YOUR_APP.appspot.com",
-    messagingSenderId: "XXXX",
-    appId: "1:XXXX:web:XXXX"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyA0YUIpIDh4WB4p1ewiNB0XfwHve0ByljU",
+  authDomain: "abnreport-fd733.firebaseapp.com",
+  projectId: "abnreport-fd733",
+  storageBucket: "abnreport-fd733.appspot.com", // ← ここを修正
+  messagingSenderId: "349748947315",
+  appId: "1:349748947315:web:010cb671d2a95bcf1f7d06"
+};
 
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
