--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -2766,7 +2766,7 @@
                     }
                 }
                 
-                // saveData(); // 呼び出し元で既に実行されているため不要
+                saveData();
                 renderTimeline();
                 renderTaskList();
                 updateAnalytics();
@@ -2881,7 +2881,7 @@
             };
 
             tasks.push(task);
-            // saveData(); // 呼び出し元で既に実行されているため不要
+            saveData();
             renderTaskList();
             updateAnalytics();
             updateTaskSelectors();  // タスクセレクタを更新
@@ -2947,10 +2947,11 @@
         }
 
         function toggleComplete(id) {
+            saveStateForUndo();
             const task = tasks.find(t => t.id === id);
             if (task) {
                 task.completed = !task.completed;
-                // saveData(); // 呼び出し元で既に実行されているため不要
+                saveData();
                 renderTaskList();
                 updateAnalytics();
             }
@@ -2961,7 +2962,7 @@
             if (!confirm('このタスクを削除しますか？')) return;
             tasks = tasks.filter(t => t.id !== id);
             timelineItems = timelineItems.filter(item => item.taskId !== id);
-            // saveData(); // 呼び出し元で既に実行されているため不要
+            saveData();
             renderTaskList();
             renderTimeline();
             updateAnalytics();
@@ -3661,7 +3662,7 @@
                             }
                         });
                     }
-                    // saveData(); // 呼び出し元で既に実行されているため不要
+                    saveData();
                     renderTaskList();
                     updateAnalytics();
                 }
@@ -4472,7 +4473,7 @@
                         timelineItems = data.timelineItems || [];
                         members = data.members || ['山田太郎', '佐藤花子', '鈴木一郎', '田中美咲'];
                         
-                        // saveData(); // 呼び出し元で既に実行されているため不要
+                        saveData();
                         renderTaskList();
                         renderTimeline();
                         updateAnalytics();
